# selenium-screenshot-compare

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  PerPageModifier.py  README.md  ScreenshotCompareLibrary.py  compare.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: auto-tag.yml  ci.yml  release.yml
docs/: authenticated-sessions.md  firefox-setup.md  keywords.md  windows.md
resources/keywords/: ScreenshotCompareLibrary.py
resources/keywords/utils/: __init__.py  capture.py  naming.py  session.py  storage.py
selenium_screenshot_compare/: ScreenshotCompareLibrary.py  naming.py  session.py  storage.py
src/: PerPageModifier.py  ScreenshotCompareLibrary.py  __init__.py  capture.py  compare.py  comparison.py  crawl.py  session.py
src/selenium_screenshot_compare/: ScreenshotCompareLibrary.py  __init__.py  capture.py  comparison.py  naming.py  session.py  storage.py
tests/: capture_auth.robot  firefox_versions.robot  interactive_navigation.robot
