[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selenium-screenshot-compare"
dynamic = ["version"]
description = "Compare a website's rendering between two Firefox versions driven in parallel via Selenium (Python + Robot Framework library)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "EAnathos" }]
keywords = ["selenium", "firefox", "screenshot", "diff", "robot-framework", "visual-regression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework :: Library",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "selenium>=4.20",
    "Pillow>=10.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
robot = ["robotframework>=7.0"]
dev = [
    "robotframework>=7.0",
    "robotframework-robocop>=8.0",
    "pre-commit>=4.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/EAnathos/selenium-screenshot-compare"
Source = "https://github.com/EAnathos/selenium-screenshot-compare"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
